8061723: 8060056 breaks tests on Windows
Reviewed-by: darcy