@@ -29,10 +29,6 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
@@ -44,8 +40,7 @@ import java.util.Iterator;
 import java.util.LinkedHashSet;
 import java.util.Map;
 import java.util.Set;
-import java.util.regex.Pattern;
-import java.util.stream.Stream;
+import java.util.StringTokenizer;
 import java.util.zip.ZipFile;
 
 import javax.tools.JavaFileManager;
@@ -110,7 +105,7 @@ public class Locations {
         this.fsInfo = fsInfo;
     }
 
-    public Collection<Path> bootClassPath() {
+    public Collection<File> bootClassPath() {
         return getLocation(PLATFORM_CLASS_PATH);
     }
 
@@ -120,52 +115,56 @@ public class Locations {
         return h.isDefault();
     }
 
-    boolean isDefaultBootClassPathRtJar(Path file) {
+    boolean isDefaultBootClassPathRtJar(File file) {
         BootClassPathLocationHandler h
                 = (BootClassPathLocationHandler) getHandler(PLATFORM_CLASS_PATH);
         return h.isDefaultRtJar(file);
     }
 
-    public Collection<Path> userClassPath() {
+    public Collection<File> userClassPath() {
         return getLocation(CLASS_PATH);
     }
 
-    public Collection<Path> sourcePath() {
-        Collection<Path> p = getLocation(SOURCE_PATH);
+    public Collection<File> sourcePath() {
+        Collection<File> p = getLocation(SOURCE_PATH);
         // TODO: this should be handled by the LocationHandler
         return p == null || p.isEmpty() ? null : p;
     }
 
     /**
-     * Split a search path into its elements. Empty path elements will be ignored.
+     * Split a path into its elements. Empty path elements will be ignored.
      *
-     * @param searchPath The search path to be split
+     * @param path The path to be split
      * @return The elements of the path
      */
-    private static Iterable<Path> getPathEntries(String searchPath) {
-        return getPathEntries(searchPath, null);
+    private static Iterable<File> getPathEntries(String path) {
+        return getPathEntries(path, null);
     }
 
     /**
-     * Split a search path into its elements. If emptyPathDefault is not null, all empty elements in the
+     * Split a path into its elements. If emptyPathDefault is not null, all empty elements in the
      * path, including empty elements at either end of the path, will be replaced with the value of
      * emptyPathDefault.
      *
-     * @param searchPath The search path to be split
+     * @param path The path to be split
      * @param emptyPathDefault The value to substitute for empty path elements, or null, to ignore
      * empty path elements
      * @return The elements of the path
      */
-    private static Iterable<Path> getPathEntries(String searchPath, Path emptyPathDefault) {
-        ListBuffer<Path> entries = new ListBuffer<>();
-        for (String s: searchPath.split(Pattern.quote(File.pathSeparator), -1)) {
-            if (s.isEmpty()) {
-                if (emptyPathDefault != null) {
-                    entries.add(emptyPathDefault);
-                }
-            } else {
-                entries.add(Paths.get(s));
+    private static Iterable<File> getPathEntries(String path, File emptyPathDefault) {
+        ListBuffer<File> entries = new ListBuffer<>();
+        int start = 0;
+        while (start <= path.length()) {
+            int sep = path.indexOf(File.pathSeparatorChar, start);
+            if (sep == -1) {
+                sep = path.length();
             }
+            if (start < sep) {
+                entries.add(new File(path.substring(start, sep)));
+            } else if (emptyPathDefault != null) {
+                entries.add(emptyPathDefault);
+            }
+            start = sep + 1;
         }
         return entries;
     }
@@ -174,12 +173,12 @@ public class Locations {
      * Utility class to help evaluate a path option. Duplicate entries are ignored, jar class paths
      * can be expanded.
      */
-    private class SearchPath extends LinkedHashSet<Path> {
+    private class SearchPath extends LinkedHashSet<File> {
 
         private static final long serialVersionUID = 0;
 
         private boolean expandJarClassPaths = false;
-        private final Set<Path> canonicalValues = new HashSet<>();
+        private final Set<File> canonicalValues = new HashSet<>();
 
         public SearchPath expandJarClassPaths(boolean x) {
             expandJarClassPaths = x;
@@ -189,9 +188,9 @@ public class Locations {
         /**
          * What to use when path element is the empty string
          */
-        private Path emptyPathDefault = null;
+        private File emptyPathDefault = null;
 
-        public SearchPath emptyPathDefault(Path x) {
+        public SearchPath emptyPathDefault(File x) {
             emptyPathDefault = x;
             return this;
         }
@@ -201,7 +200,7 @@ public class Locations {
             expandJarClassPaths = true;
             try {
                 if (dirs != null) {
-                    for (Path dir : getPathEntries(dirs)) {
+                    for (File dir : getPathEntries(dirs)) {
                         addDirectory(dir, warn);
                     }
                 }
@@ -215,8 +214,8 @@ public class Locations {
             return addDirectories(dirs, warn);
         }
 
-        private void addDirectory(Path dir, boolean warn) {
-            if (!Files.isDirectory(dir)) {
+        private void addDirectory(File dir, boolean warn) {
+            if (!dir.isDirectory()) {
                 if (warn) {
                     log.warning(Lint.LintCategory.PATH,
                             "dir.path.element.not.found", dir);
@@ -224,10 +223,15 @@ public class Locations {
                 return;
             }
 
-            try (Stream<Path> s = Files.list(dir)) {
-                s.filter(dirEntry -> isArchive(dirEntry))
-                        .forEach(dirEntry -> addFile(dirEntry, warn));
-            } catch (IOException ignore) {
+            File[] files = dir.listFiles();
+            if (files == null) {
+                return;
+            }
+
+            for (File direntry : files) {
+                if (isArchive(direntry)) {
+                    addFile(direntry, warn);
+                }
             }
         }
 
@@ -242,20 +246,20 @@ public class Locations {
             return addFiles(files, warn);
         }
 
-        public SearchPath addFiles(Iterable<? extends Path> files, boolean warn) {
+        public SearchPath addFiles(Iterable<? extends File> files, boolean warn) {
             if (files != null) {
-                for (Path file : files) {
+                for (File file : files) {
                     addFile(file, warn);
                 }
             }
             return this;
         }
 
-        public SearchPath addFiles(Iterable<? extends Path> files) {
+        public SearchPath addFiles(Iterable<? extends File> files) {
             return addFiles(files, warn);
         }
 
-        public void addFile(Path file, boolean warn) {
+        public void addFile(File file, boolean warn) {
             if (contains(file)) {
                 // discard duplicates
                 return;
@@ -271,7 +275,7 @@ public class Locations {
                 return;
             }
 
-            Path canonFile = fsInfo.getCanonicalFile(file);
+            File canonFile = fsInfo.getCanonicalFile(file);
             if (canonicalValues.contains(canonFile)) {
                 /* Discard duplicates and avoid infinite recursion */
                 return;
@@ -283,7 +287,7 @@ public class Locations {
                     /* Not a recognized extension; open it to see if
                      it looks like a valid zip file. */
                     try {
-                        ZipFile z = new ZipFile(file.toFile());
+                        ZipFile z = new ZipFile(file);
                         z.close();
                         if (warn) {
                             log.warning(Lint.LintCategory.PATH,
@@ -314,9 +318,9 @@ public class Locations {
         // Manifest entry.  In some future release, we may want to
         // update this code to recognize URLs rather than simple
         // filenames, but if we do, we should redo all path-related code.
-        private void addJarClassPath(Path jarFile, boolean warn) {
+        private void addJarClassPath(File jarFile, boolean warn) {
             try {
-                for (Path f : fsInfo.getJarClassPath(jarFile)) {
+                for (File f : fsInfo.getJarClassPath(jarFile)) {
                     addFile(f, warn);
                 }
             } catch (IOException e) {
@@ -361,12 +365,12 @@ public class Locations {
         /**
          * @see StandardJavaFileManager#getLocation
          */
-        abstract Collection<Path> getLocation();
+        abstract Collection<File> getLocation();
 
         /**
          * @see StandardJavaFileManager#setLocation
          */
-        abstract void setLocation(Iterable<? extends Path> files) throws IOException;
+        abstract void setLocation(Iterable<? extends File> files) throws IOException;
     }
 
     /**
@@ -376,7 +380,7 @@ public class Locations {
      */
     private class OutputLocationHandler extends LocationHandler {
 
-        private Path outputDir;
+        private File outputDir;
 
         OutputLocationHandler(Location location, Option... options) {
             super(location, options);
@@ -392,31 +396,31 @@ public class Locations {
             // need to decide how best to report issue for benefit of
             // direct API call on JavaFileManager.handleOption(specifies IAE)
             // vs. command line decoding.
-            outputDir = (value == null) ? null : Paths.get(value);
+            outputDir = (value == null) ? null : new File(value);
             return true;
         }
 
         @Override
-        Collection<Path> getLocation() {
+        Collection<File> getLocation() {
             return (outputDir == null) ? null : Collections.singleton(outputDir);
         }
 
         @Override
-        void setLocation(Iterable<? extends Path> files) throws IOException {
+        void setLocation(Iterable<? extends File> files) throws IOException {
             if (files == null) {
                 outputDir = null;
             } else {
-                Iterator<? extends Path> pathIter = files.iterator();
+                Iterator<? extends File> pathIter = files.iterator();
                 if (!pathIter.hasNext()) {
                     throw new IllegalArgumentException("empty path for directory");
                 }
-                Path dir = pathIter.next();
+                File dir = pathIter.next();
                 if (pathIter.hasNext()) {
                     throw new IllegalArgumentException("path too long for directory");
                 }
-                if (!Files.exists(dir)) {
+                if (!dir.exists()) {
                     throw new FileNotFoundException(dir + ": does not exist");
-                } else if (!Files.isDirectory(dir)) {
+                } else if (!dir.isDirectory()) {
                     throw new IOException(dir + ": not a directory");
                 }
                 outputDir = dir;
@@ -431,7 +435,7 @@ public class Locations {
      */
     private class SimpleLocationHandler extends LocationHandler {
 
-        protected Collection<Path> searchPath;
+        protected Collection<File> searchPath;
 
         SimpleLocationHandler(Location location, Option... options) {
             super(location, options);
@@ -448,12 +452,12 @@ public class Locations {
         }
 
         @Override
-        Collection<Path> getLocation() {
+        Collection<File> getLocation() {
             return searchPath;
         }
 
         @Override
-        void setLocation(Iterable<? extends Path> files) {
+        void setLocation(Iterable<? extends File> files) {
             SearchPath p;
             if (files == null) {
                 p = computePath(null);
@@ -484,7 +488,7 @@ public class Locations {
         }
 
         @Override
-        Collection<Path> getLocation() {
+        Collection<File> getLocation() {
             lazy();
             return searchPath;
         }
@@ -516,7 +520,7 @@ public class Locations {
         protected SearchPath createPath() {
             return new SearchPath()
                     .expandJarClassPaths(true) // Only search user jars for Class-Paths
-                    .emptyPathDefault(Paths.get("."));  // Empty path elt ==> current directory
+                    .emptyPathDefault(new File("."));  // Empty path elt ==> current directory
         }
 
         private void lazy() {
@@ -535,14 +539,14 @@ public class Locations {
      */
     private class BootClassPathLocationHandler extends LocationHandler {
 
-        private Collection<Path> searchPath;
+        private Collection<File> searchPath;
         final Map<Option, String> optionValues = new EnumMap<>(Option.class);
 
         /**
          * rt.jar as found on the default bootclasspath. If the user specified a bootclasspath, null
          * is used.
          */
-        private Path defaultBootClassPathRtJar = null;
+        private File defaultBootClassPathRtJar = null;
 
         /**
          * Is bootclasspath the default?
@@ -563,7 +567,7 @@ public class Locations {
             return isDefaultBootClassPath;
         }
 
-        boolean isDefaultRtJar(Path file) {
+        boolean isDefaultRtJar(File file) {
             lazy();
             return file.equals(defaultBootClassPathRtJar);
         }
@@ -600,13 +604,13 @@ public class Locations {
         }
 
         @Override
-        Collection<Path> getLocation() {
+        Collection<File> getLocation() {
             lazy();
             return searchPath;
         }
 
         @Override
-        void setLocation(Iterable<? extends Path> files) {
+        void setLocation(Iterable<? extends File> files) {
             if (files == null) {
                 searchPath = null;  // reset to "uninitialized"
             } else {
@@ -641,9 +645,9 @@ public class Locations {
                 // Standard system classes for this compiler's release.
                 String files = System.getProperty("sun.boot.class.path");
                 path.addFiles(files, false);
-                Path rt_jar = Paths.get("rt.jar");
-                for (Path file : getPathEntries(files)) {
-                    if (file.getFileName().equals(rt_jar)) {
+                File rt_jar = new File("rt.jar");
+                for (File file : getPathEntries(files)) {
+                    if (new File(file.getName()).equals(rt_jar)) {
                         defaultBootClassPathRtJar = file;
                     }
                 }
@@ -705,12 +709,12 @@ public class Locations {
         return (h == null ? false : h.handleOption(option, value));
     }
 
-    Collection<Path> getLocation(Location location) {
+    Collection<File> getLocation(Location location) {
         LocationHandler h = getHandler(location);
         return (h == null ? null : h.getLocation());
     }
 
-    Path getOutputLocation(Location location) {
+    File getOutputLocation(Location location) {
         if (!location.isOutputLocation()) {
             throw new IllegalArgumentException();
         }
@@ -718,7 +722,7 @@ public class Locations {
         return ((OutputLocationHandler) h).outputDir;
     }
 
-    void setLocation(Location location, Iterable<? extends Path> files) throws IOException {
+    void setLocation(Location location, Iterable<? extends File> files) throws IOException {
         LocationHandler h = getHandler(location);
         if (h == null) {
             if (location.isOutputLocation()) {
@@ -739,8 +743,8 @@ public class Locations {
     /**
      * Is this the name of an archive file?
      */
-    private boolean isArchive(Path file) {
-        String n = StringUtils.toLowerCase(file.getFileName().toString());
+    private boolean isArchive(File file) {
+        String n = StringUtils.toLowerCase(file.getName());
         return fsInfo.isFile(file)
                 && (n.endsWith(".jar") || n.endsWith(".zip"));
     }
@@ -749,41 +753,50 @@ public class Locations {
      * Utility method for converting a search path string to an array of directory and JAR file
      * URLs.
      *
-     * Note that this method is called by the DocletInvoker.
+     * Note that this method is called by apt and the DocletInvoker.
      *
      * @param path the search path string
      * @return the resulting array of directory and JAR file URLs
      */
     public static URL[] pathToURLs(String path) {
-        java.util.List<URL> urls = new ArrayList<>();
-        for (String s: path.split(Pattern.quote(File.pathSeparator))) {
-            if (!s.isEmpty()) {
-                URL url = fileToURL(Paths.get(s));
-                if (url != null) {
-                    urls.add(url);
-                }
+        StringTokenizer st = new StringTokenizer(path, File.pathSeparator);
+        URL[] urls = new URL[st.countTokens()];
+        int count = 0;
+        while (st.hasMoreTokens()) {
+            URL url = fileToURL(new File(st.nextToken()));
+            if (url != null) {
+                urls[count++] = url;
             }
         }
-        return urls.toArray(new URL[urls.size()]);
+        urls = Arrays.copyOf(urls, count);
+        return urls;
     }
 
     /**
      * Returns the directory or JAR file URL corresponding to the specified local file name.
      *
-     * @param file the Path object
+     * @param file the File object
      * @return the resulting directory or JAR file URL, or null if unknown
      */
-    private static URL fileToURL(Path file) {
-        Path p;
+    private static URL fileToURL(File file) {
+        String name;
         try {
-            p = file.toRealPath();
+            name = file.getCanonicalPath();
         } catch (IOException e) {
-            p = file.toAbsolutePath();
+            name = file.getAbsolutePath();
+        }
+        name = name.replace(File.separatorChar, '/');
+        if (!name.startsWith("/")) {
+            name = "/" + name;
+        }
+        // If the file does not exist, then assume that it's a directory
+        if (!file.isFile()) {
+            name = name + "/";
         }
         try {
-            return p.normalize().toUri().toURL();
+            return new URL("file", "", name);
         } catch (MalformedURLException e) {
-            return null;
+            throw new IllegalArgumentException(file.toString());
         }
     }
 }
